<resources>
    <string name="app_name">Belajar Online</string>

    <!-- Register -->
    <string name="register_title">Buat Akun</string>
    <string name="register_hint_username">USERNAME</string>
    <string name="register_hint_email">EMAIL</string>
    <string name="register_hint_phone">NO. TELEPON</string>
    <string name="register_hint_password">PASSWORD</string>
    <string name="register_hint_password_confirm">KONFRIMASI PASSWORD</string>
    <string name="register_button">Register</string>

    <!-- Login -->
    <string name="login_button">Login</string>

    <string name="validation_error_username">Username harus diisi</string>
    <string name="validation_error_email">Email tidak valid</string>
    <string name="validation_error_phone">No. Telepon harus diisi</string>
    <string name="validation_error_password">Password harus diisi</string>
    <string name="validation_error_password_confirm">Masukkan ulang password</string>
    <string name="login_title">Login</string>
    <string name="login_register_button">Register</string>
    <string name="class_detail_desc_title">Deskripsi</string>
    <string name="class_detail_description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="class_detail_time_title">Waktu</string>
    <string name="class_detail_time">Kamis, 1 Nov 2017 13:00 - 16:00</string>
    <string name="class_detail_location_title">Lokasi</string>
    <string name="class_detail_location">Antologi Collaborative Space, Yogyakarta</string>
    <string name="class_detail_status_title">Status</string>
    <string name="class_detail_status">Akan Datang</string>
</resources>
