<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context="com.example.nur.belajaronline.RegisterActivity">

    <View
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:background="@color/colorPrimary" />

    <android.support.v7.widget.Toolbar
        android:id="@+id/register_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@android:color/transparent"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

    </android.support.v7.widget.Toolbar>

    <TextView
        android:id="@+id/tv_register_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/register_title"
        android:textColor="@android:color/white"
        android:textSize="22dp"
        android:textStyle="bold" />

    <View
        android:id="@+id/view"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:background="@drawable/rounded_profile_image" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="90dp"
        android:src="@drawable/ic_person_grey" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/view"
        android:layout_marginTop="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="vertical"
            android:paddingLeft="32dp"
            android:paddingRight="32dp">

            <EditText
                android:id="@+id/et_register_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/register_hint_username"
                android:inputType="text"
                android:maxLines="1"
                android:paddingBottom="20dp"
                android:paddingTop="20dp"
                android:textColorHint="@color/colorPrimary"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/et_register_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/register_hint_email"
                android:inputType="textEmailAddress"
                android:paddingBottom="20dp"
                android:paddingTop="20dp"
                android:textColorHint="@color/colorPrimary"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/et_register_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/register_hint_phone"
                android:inputType="phone"
                android:paddingBottom="20dp"
                android:paddingTop="20dp"
                android:textColorHint="@color/colorPrimary"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/et_register_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/register_hint_password"
                android:inputType="textPassword"
                android:paddingBottom="20dp"
                android:paddingTop="20dp"
                android:textColorHint="@color/colorPrimary"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/et_register_password_confirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/register_hint_password_confirm"
                android:inputType="textPassword"
                android:paddingBottom="20dp"
                android:paddingTop="20dp"
                android:textColorHint="@color/colorPrimary"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btn_register_submit"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/register_button"
                android:text="@string/register_button"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
