<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context="com.example.nur.belajaronline.LoginActivity">

    <View
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@color/colorPrimary" />


    <ImageView
        android:id="@+id/iv_login_logo"
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:layout_marginTop="50dp"
        android:scaleType="fitCenter"
        android:src="@drawable/logo_cariilmu" />


    <LinearLayout
        android:id="@+id/wrap_login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_login_logo"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="64dp"
        android:background="@drawable/login_form_background"
        android:orientation="vertical"
        android:paddingBottom="64dp"
        android:paddingLeft="32dp"
        android:paddingRight="32dp">

        <TextView
            android:id="@+id/tv_login_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="32dp"
            android:text="@string/login_title"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_login_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_hint_username"
            android:inputType="text"
            android:maxLines="1"
            android:paddingBottom="20dp"
            android:paddingTop="20dp"
            android:textColorHint="@color/colorPrimary"
            android:textSize="14sp" />


        <EditText
            android:id="@+id/et_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_hint_password"
            android:inputType="textPassword"
            android:paddingBottom="20dp"
            android:paddingTop="20dp"
            android:textColorHint="@color/colorPrimary"
            android:textSize="14sp" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_login_submit"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@+id/wrap_login_form"
        android:layout_marginLeft="52dp"
        android:layout_marginRight="52dp"
        android:layout_marginTop="-24dp"
        android:background="@drawable/register_button"
        android:text="@string/login_button"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_login_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_login_submit"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"
        android:text="@string/login_register_button"
        android:textAllCaps="false"
        android:textColor="@color/colorAccent"
        android:textSize="14sp"
        android:textStyle="bold" />

</RelativeLayout>
